# HydraLink

./: README.md
sample-services/api/: .gitignore  Dockerfile  pyproject.toml
sample-services/api/src/: main.py
sample-services/webpage/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
sample-services/webpage/src/: About.svelte  App.svelte  Home.svelte  global.css  main.js
