[tool.poetry]
name = "hydralink-sample-api"
version = "0.1.0"
description = "A sample api to use in a platform project"
authors = ["Max Yarmakovich <yamaksim@sas.upenn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
